testsuite/poke.pkl/printf-diag-8.pk
/* { dg-do compile } */

/* Malformed tag class.  */

printf "xxx%<fooxxx%<bar:xxx%>xxx"; /* { dg-error "" } */
